[gd_scene load_steps=7 format=2]

[ext_resource path="res://the_wall.gd" type="Script" id=1]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://logo.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("timer:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 696, 17 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "timer"
length = 150.0
tracks/0/type = "value"
tracks/0/path = NodePath("timer:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 150 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 696, 17 ), Vector2( 0, 17 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="the_wall" type="Node2D"]
script = ExtResource( 1 )

[node name="joke_audio" type="AudioStreamPlayer" parent="."]

[node name="audio" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/timer = SubResource( 2 )

[node name="buttonArea" type="ColorRect" parent="."]
margin_left = 140.0
margin_top = 35.0
margin_right = 884.0
margin_bottom = 483.0
color = Color( 0, 0.0392157, 1, 1 )

[node name="timer_bg" type="ColorRect" parent="."]
margin_left = 160.0
margin_top = 505.0
margin_right = 864.0
margin_bottom = 530.0
color = Color( 0.368627, 0.368627, 0.745098, 1 )

[node name="timer" type="ColorRect" parent="."]
margin_left = 860.0
margin_top = 509.0
margin_right = 1556.0
margin_bottom = 526.0
rect_scale = Vector2( -1, 1 )
color = Color( 0.627451, 0.627451, 1, 1 )

[node name="tries" type="Node2D" parent="."]
visible = false
position = Vector2( 746, 556 )
scale = Vector2( 0.12, 0.12 )

[node name="3" type="Sprite" parent="tries"]
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="tries"]
position = Vector2( 348, 0 )
texture = ExtResource( 3 )

[node name="1" type="Sprite" parent="tries"]
position = Vector2( 696, 0 )
texture = ExtResource( 3 )

[node name="end_fade" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.572549 )
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="solved" type="ColorRect" parent="end_fade"]
visible = false
margin_left = 284.0
margin_top = 140.0
margin_right = 472.0
margin_bottom = 180.0
rect_scale = Vector2( 2.5, 2.5 )
color = Color( 0.588235, 0.588235, 0.588235, 1 )

[node name="Label" type="Label" parent="end_fade/solved"]
margin_left = 23.6
margin_top = 10.4
margin_right = 168.6
margin_bottom = 29.4
custom_colors/font_color = Color( 0.290196, 1, 0.117647, 1 )
custom_fonts/font = SubResource( 3 )
text = "The wall was solved"

[node name="frozen" type="ColorRect" parent="end_fade"]
visible = false
margin_left = 284.0
margin_top = 140.0
margin_right = 472.0
margin_bottom = 180.0
rect_scale = Vector2( 2.5, 2.5 )
color = Color( 0.588235, 0.588235, 0.588235, 1 )

[node name="Label" type="Label" parent="end_fade/frozen"]
margin_left = 23.6
margin_top = 10.4
margin_right = 168.6
margin_bottom = 29.4
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "The wall was frozen"

[node name="press_space" type="Label" parent="end_fade"]
margin_left = 368.0
margin_top = 549.0
margin_right = 573.0
margin_bottom = 563.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Press space or A button for next"

[connection signal="finished" from="joke_audio" to="." method="_on_joke_audio_finished"]
[connection signal="finished" from="audio" to="." method="_on_audio_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
